@@ -129,11 +129,15 @@ Other changes:
   and when backend/OS is emitting dual-axis wheeling inputs (typically touch pads on macOS).
   We now select a primary axis based on recent events, and select a target window based on it.
   We expect this behavior to be further improved/tweaked. (#3795, #4559) [@ocornut, @folays]
+- InputText: fixed cursor navigation when pressing Up Arrow on the last character of a
+  multiline buffer which doesn't end with a carriage return. (#6000)
 - Text: fixed layouting of wrapped-text block when the last source line is above the
   clipping region. Regression added in 1.89. (#5720, #5919)
 - Misc: added GetItemID() in public API. It is not often expected that you would use this,
   but it is useful for Shortcut() and upcoming owner-aware input functions which wants to
   be implemented with public API.
+- Fonts: imgui_freetype: fixed a packing issue which in some occurrences would prevent large
+  amount of glyphs from being packed correctly. (#5788, #5829)
 - Fonts: added a 'void* UserData' field in ImFontAtlas, as a convenience for use by
   applications using multiple font atlases.
 - Demo: added "Inputs->Shortcut Routing" section.
@@ -142,6 +146,10 @@ Other changes:
 - Misc: fixed parameters to IMGUI_DEBUG_LOG() not being dead-stripped when building
   with IMGUI_DISABLE_DEBUG_TOOLS is used. (#5901) [@Teselka]
 - Misc: fixed compile-time detection of SSE features on MSVC 32-bits builds. (#5943) [@TheMostDiligent]
+- Examples: DirectX10, DirectX11: try WARP software driver if hardware driver is not available. (#5924, #5562)
+- Backends: GLFW: Fixed mods state on Linux when using Alt-GR text input (e.g. German keyboard layout), which
+  could lead to broken text input. Revert a 2022/01/17 change were we resumed using mods provided by GLFW,
+  turns out they are faulty in this specific situation. (#6034)
 - Backends: Allegro5: restoring using al_draw_indexed_prim() when Allegro version is >= 5.2.5. (#5937) [@Espyo]
 - Backends: Vulkan: Fixed sampler passed to ImGui_ImplVulkan_AddTexture() not being honored as we were using
   an immutable sampler. (#5502, #6001, #914) [@martin-ejdestig, @rytisss]
